...
                    const SizedBox(height: 25),
                    Text('Iniciar Sesión', style: textTheme.headlineMedium, textAlign: TextAlign.center),
                    const SizedBox(height: 35),

                    TextFormField(
                      // <<<--- AÑADIDO (para TC-001, TC-002, TC-003, TC-004, TC-007, TC-008, TC-009, TC-010)
                      key: const Key('login_email_field'),
                      controller: _emailController,
                      enabled: !authProvider.isLoading,
                      decoration: const InputDecoration(labelText: 'Correo Electrónico'),
                      keyboardType: TextInputType.emailAddress,
                      validator: (value) {
                        if (value == null || value.trim().isEmpty) return 'Ingresa correo';
...
                      },
                    ),
                    const SizedBox(height: 20),

                    TextFormField(
                      // <<<--- AÑADIDO (para TC-001, TC-002, TC-003, TC-004, TC-007, TC-008, TC-009, TC-010)
                      key: const Key('login_password_field'),
                      controller: _passwordController,
                      enabled: !authProvider.isLoading,
                      decoration: const InputDecoration(labelText: 'Contraseña'),
                      obscureText: true,
                      validator: (value) {
                        if (value == null || value.isEmpty) return 'Ingresa contraseña';
...
                        ? const Center(child: Padding(
                            padding: EdgeInsets.symmetric(vertical: 16.0),
                            child: CircularProgressIndicator(),
                          ))
                        : ElevatedButton(
                            // <<<--- AÑADIDO (para TC-001, TC-002, TC-003, TC-004, TC-007, TC-008, TC-009, TC-010)
                            key: const Key('login_button'),
                            style: CustomButtonStyles.primary(),
                            onPressed: authProvider.isLoading ? null : _submitLogin,
                            child: const Text('Iniciar Sesión'),
                          ),
                    const SizedBox(height: 20),

...
