...
          Color statusColor;
          String statusText;
          switch (assignment.status) {
            case PlanAssignmentStatus.aceptado:
              statusIcon = Icons.check_circle;
              statusColor = AppColors.successDark;
              statusText = "Aceptado";
              break;
            case PlanAssignmentStatus.rechazado:
              statusIcon = Icons.cancel;
              statusColor = AppColors.errorDark;
              statusText = "Rechazado";
              break;
...
                      children: <Widget>[
                        IconButton(
                          // <<<--- AÑADIDO (para TC-002)
                          key: Key('assignment_accept_button_${assignment.id}'),
                          icon: const Icon(Icons.check_circle_outline),
                          color: AppColors.successDark,
                          tooltip: 'Aceptar Plan',
                          padding: EdgeInsets.zero,
                          visualDensity: VisualDensity.compact,
                          constraints: const BoxConstraints(),
                          splashRadius: 20,
                          onPressed: () async {
                            final prov = context.read<TrainingPlanProvider>();
...
