...
              ),
      ),
      floatingActionButton: currentUser == null
          ? null
          : FloatingActionButton(
              // <<<--- AÑADIDO (para TC-003)
              key: const Key('chats_new_chat_fab'),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                    builder: (_) => SelectUserForChatView(currentUser: currentUser),
                  ),
...
