...
              padding: const EdgeInsets.fromLTRB(12, 8, 12, 18),
              child: Row(
                children: [
                  Expanded(
                    child: TextField(
                      // <<<--- AÑADIDO (para TC-004)
                      key: const Key('chat_message_field'),
                      controller: _controller,
                      minLines: 1,
                      maxLines: 4,
                      decoration: InputDecoration(
                        hintText: "Escribe tu mensaje...",
                        filled: true,
...
